css/index.css
html {
    box-sizing: border-box;
}

:root {
    --goldeyes-red: #ca3339;
    --main-bg-color: hsl(150, 20%, 96%);
    --dark-bg-color: hsl(196, 38%, 92%);
    --closed-bg-color: var(--goldeyes-red);
    --closed-color: hsl(0, 100%, 97%);
}

body {
    background-color: var(--main-bg-color);
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    color: hsl(36, 100%, 5%);
    font-size: calc(15px + 0.390625vw);
}

h1, h2 {
    font-family: "Playfair Display", serif;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
}

h1 {
    font-size: 2em;
}

blockquote {
    max-width: 80%;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    padding-left: 2em;
    padding-right: 1.2em;
    margin-left: 1em;
    display: block;
    border-left: 2px solid gray;
    background: hsla(0, 0%, 20%, 0.05);
    text-indent: -0.85em;
}

blockquote::before {
    font-weight: bold;
    font-size: 140%;
    content: "“";
}
blockquote::after {
    content: none;
}

.announce {
    padding: 0.5em;
    margin-bottom: 2em;
    text-align: center;
}

.yes body {
    margin-left: 0;
    margin-right: 0;
}

.yes .announce {
    padding-left: 0;
    padding-right: 0;
    margin-left: -8px;
    margin-right: -8px;
}
.yes #answer {
    padding-top: 2em;
    padding-bottom: 2em;
    background-color: var(--closed-bg-color);
    font-size: 1.3em;
}

.yes #answer em {
    color: var(--closed-color);
}

/*.explanation > p, .explanation > h2 {*/
.explanation {
    padding: 0.5em 1em;
}

.diagrams > figure {
    margin-left: 0;
    margin-right: 0;
    margin-top: 2em;
    margin-bottom: 2em;
}

.diagrams figure img, .diagrams figure source, .diagrams figure svg {
    margin-top: 1em;
    margin-left: 1em;
}

.diagrams img, .diagrams svg {
    /* The image should be 100% width, but should not skew its aspect ratio */
    max-width: calc(100% - 2em);
    height: auto;
}

@media (min-width: 1200px) {
 .explanation, .diagrams {
     /* max width should be 1000px the column should be centered on the page */
     max-width: 1000px;
     margin: 0 auto;
 }

    h2 {
        margin-left: -1em;
    }
}

/* Warn about PDFs */
a[href*=".pdf"]::after {
    content: url("https://www.codeinwp.com/wp-content/uploads/2021/12/pdficon.png");
    vertical-align: middle;
}


svg #exclusion-circle {
    stroke: var(--goldeyes-red);
    stroke-width: 10px;
    /*fill: #ca3339;*/
    /*fill-opacity: 40%;*/
}

svg #exclusion-hatch line {
    stroke: var(--goldeyes-red);
}

